sample/msvc/error/c2032.cpp
// C2032.c
extern "C" struct z {
   int i;
   void func();   // C2032
};
